# IDataMig

./: .gitignore  README.md  app.py  main.py  pyproject.toml
Analise-Dados-Artigo/: Readme.MD  output2_csv.csv  output5_csv.csv  output_csv.csv  outputtpch10.csv  testes_estatísticos.ipynb
Analise-Dados-Artigo/Logs/: LogPerf.txt  LogPerf2.txt  LogPerf3.txt  LogPerf4.txt  LogPerf5.txt  TPCH10.txt  full-log.py  logstpch10.txt  output1_csv.csv  output3_csv.csv  output4_csv.csv  output_tpch_csv.csv  parse_csv.py  parse_csv_old.py
dbmigrator/configuration_management/: configuration.py  db_credentials.py  utils.py
dbmigrator/data_access/: metadata_models.py  mysql_data_access.py  mysql_metadata_reader.py  postgresql_data_access.py  postgresql_metadata_access.py
dbmigrator/data_migration/: mysql_to_postgresql.py
dbmigrator/database_connections/: mysql_connection.py  postgresql_connection.py
dbmigrator/migration_logging/: log.py
dbmigrator/migration_logging/observer/: i_observer.py  logging_level.py  python_logger_observable.py
dbmigrator/structure_conversion/: column_type_mapping.py  csv_utils.py  table_to_json.py  table_to_sql.py
pg_sandbox/: docker-compose.yml
sandbox/: docker-compose.yml
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
tests/: test_connections.py  test_conversion.py  test_log.py  test_metadata_fetch_table.py  test_metadata_sql.py  test_migration.py  test_migration_log.py  test_mysql_iterator.py  test_postgresql_ddl.py  test_postgresql_manager.py  test_postgresql_writer.py
(+3 files in other folders)
